Replaced image with linear gradient and fixed width on smaller displays (#5)
* fixed width on smaller displays

* replaced image with linear gradient

--- a/main.css
+++ b/main.css
@@ -2,7 +2,13 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 body {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Flag_of_Catania.svg/1280px-Flag_of_Catania.svg.png);
+  background-image: linear-gradient(
+    to right,
+    #f81808 0%,
+    #f81808 50%,
+    #007dfb 50%,
+    #007dfb 100%
+  );
   /* background: #e7e7e7; */
   background-position: center;
   background-size: cover;
